--- a/block.css
+++ b/block.css
@@ -120,7 +120,7 @@ a:hover {
 
 /*Set up the background images of each html via classes (Visual Studio Code advised me to do classes if doing anything.something within css)*/
 section.index {
-    background: url(minecraft\ pictures/login.jpg) no-repeat;
+    background: url(minecraft\ pictures/index.jpg) no-repeat;
     background-size: cover;
     height: calc(150vh - 0px);
 }
@@ -161,20 +161,37 @@ section.extras {
     z-index: 2;
 }
 
+/*Youtube video size!*/
 iframe {
     width: 720px;
     height: 480px;
 }
 
-/*changing the color of the body within the table*/
+/*Changing the color of the body within the table (Was going for textbox by textbox maneuverability but got something better!*/
+
 tbody {
     text-align: center;
     border-color: rgb(190, 34, 34);
-    color: black;
+    background-color: black;
+    color: rgb(255, 255, 255);
+    padding: 5px 5px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(216, 0, 0);
+    transition: all 3s ease-in-out;
     font-weight: bold;
     font-size: 20px;
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
+}
+
+tbody:hover {
+    transform: translateY(80px);
+    box-shadow: 5px 5px 5px rgb(255, 255, 255);
+    background-color: rgb(226, 18, 18);
+    border-color: rgb(0, 255, 26);
+}
+
+tbody:active {
+    transform: translateY(20px);
+    box-shadow: 5px 5px 5px rgb(21, 255, 0);
 }
 
 /*Colors for heading 6*/
@@ -182,17 +199,17 @@ tbody {
 h6 {
     background-color: black;
     color: #fff;
-    padding: 50px 50px;
+    padding: 20px 20px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    transition: all 0.2s ease-in-out;
+    transition: all 1s ease-in-out;
     font-weight: bold;
     font-size: 70px;
 }
 
 h6:hover {
-    transform: translateY(-80px);
+    transform: translateY(80px);
     box-shadow: 0px 4px 8px black;
 }
 
@@ -205,11 +222,11 @@ h6:active {
 .push {
     background-color: #011800;
     color: #fff;
-    padding: 50px 50px;
+    padding: 40px 40px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    transition: all 0.2s ease-in-out;
+    transition: all .05s ease-in-out;
     font-weight: bold;
     font-size: 70px;
 }
@@ -228,11 +245,11 @@ h6:active {
 .update {
     background-color: #ef1010;
     color: #fff;
-    padding: 50px 50px;
+    padding: 30px 30px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    transition: all 0.2s ease-in-out;
+    transition: all 3s ease-in-out;
     font-weight: bold;
     font-size: 70px;
 }
@@ -251,11 +268,11 @@ h6:active {
 .countdownTimer {
     background-color: #011800;
     color: #fff;
-    padding: 50px 50px;
+    padding: 20px 20px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    transition: all 0.2s ease-in-out;
+    transition: all 10s ease-in-out;
     font-weight: bold;
     font-size: 70px;
 }
@@ -280,7 +297,7 @@ p {
     font-family: fantasy;
 }
 
-/*gives additional aesthetic to the start button*/
+/*Gives additional aesthetic to the start button*/
 #startButton {
     margin: 0px;
     display: block;
@@ -299,7 +316,7 @@ p {
     z-index: 2;
 }
 
-/*gives additional aesthetic to the stop button*/
+/*Gives additional aesthetic to the stop button*/
 #stopButton {
     margin: 100px;
     display: block;
@@ -318,9 +335,27 @@ p {
     z-index: 2;
 }
 
-/*Colors for the form text*/
+/*Colors for the first, last and block number form text*/
 form {
-    font: 100 150% timesnewroman;
     text-align: center;
-    color: black;
+    background-color: #149110;
+    color: #fff;
+    padding: 10px 10px;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    transition: all 1s ease-in-out;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+form:hover {
+    transform: translateY(50px);
+    box-shadow: 0px 4px 8px black;
+}
+
+form:active {
+    transform: translateY(20px);
+    box-shadow: 0px 0px 0px black;
+}
 }
