--- a/block.css
+++ b/block.css
@@ -1,3 +1,4 @@
+/*Seth Christopher*/
 /*Utilized https://www.youtube.com/watch?v=oLgtucwjVII which showed me step by step how to 'How to Create Responsive Navigation Bar using HTML and CSS'*/
 * {
     padding: 0;
